--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build": "ng-packagr -p package.json",
     "tsc": "tsc",
     "prettify:ts": "prettier --parser typescript --write src/**/*.ts",
-    "precommit": "lint-staged",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --maxWorkers=2",
@@ -52,32 +51,32 @@
     "collectCoverage": true
   },
   "peerDependencies": {
-    "@angular/core": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "rxjs": "^5.5.0"
+    "@angular/core": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.2",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/cli": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
     "@types/jest": "^22.2.2",
     "@types/node": "~6.0.60",
-    "codecov": "^3.0.0",
-    "husky": "^0.14.3",
-    "jest": "^22.4.3",
+    "codecov": "^3.0.2",
+    "husky": "^1.0.0-rc.8",
+    "jest": "^23.1.0",
     "jest-preset-angular": "^5.2.1",
-    "lint-staged": "^7.0.0",
-    "ng-packagr": "^2.2.0",
+    "lint-staged": "^7.1.3",
+    "ng-packagr": "^3.0.0",
     "prettier": "^1.11.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.0.0",
     "tslint": "~5.9.1",
-    "tslint-angular": "^1.1.1",
-    "typescript": "~2.6.0",
-    "zone.js": "^0.8.4"
+    "tslint-angular": "1.1.2",
+    "typescript": "~2.7.0",
+    "zone.js": "~0.8.26"
   },
   "dependencies": {}
 }
