--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://github.com/Efk3/angular-block.git"
   },
+  "keywords": [
+    "angular", "busy", "block", "loading", "loading indicator", "service", "directive"
+  ],
   "scripts": {
     "build": "ng-packagr -p package.json",
     "tsc": "tsc",
