--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "collectCoverage": true
   },
   "peerDependencies": {
-    "@angular/core": "^6.0.0",
-    "@angular/common": "^6.0.0",
+    "@angular/core": ">=6.0.0 <8.0.0",
+    "@angular/common": ">=6.0.0 <8.0.0",
     "rxjs": "^6.0.0"
   },
   "devDependencies": {
