--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "roots": [
       "./src/"
     ],
-    "setupTestFrameworkScriptFile": "./test/setup-jest.ts",
+    "setupFilesAfterEnv": [
+      "./test/setup-jest.ts"
+    ],
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "./tsconfig.spec.json"
+        "tsConfig": "./tsconfig.spec.json"
       }
     },
     "coverageDirectory": "./coverage/",
@@ -65,27 +67,28 @@
     "rxjs": "^6.0.0"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@types/jest": "^22.2.2",
-    "@types/node": "~6.0.60",
+    "@angular/cli": "^7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^11.0.0",
     "codecov": "^3.0.2",
+    "core-js": "^2.6.5",
     "husky": "^1.0.0-rc.8",
-    "jest": "^23.6.0",
-    "jest-preset-angular": "^5.2.3",
+    "jest": "^24.3.1",
+    "jest-preset-angular": "^7.0.1",
     "lint-staged": "^7.1.3",
-    "ng-packagr": "^4.4.0",
+    "ng-packagr": "^4.7.1",
     "prettier": "^1.11.1",
     "rxjs": "^6.0.0",
+    "tsickle": "^0.34.3",
     "tslint": "~5.9.1",
     "tslint-angular": "1.1.2",
-    "typescript": "~2.7.0",
+    "typescript": "~3.2.0",
     "zone.js": "~0.8.26"
-  },
-  "dependencies": {}
+  }
 }
